# Akindinova_AI_labs

BlobMasses/v1/: CMakeLists.txt  v1  v1.cpp
BlobMasses/v2/: CMakeCache.txt  CMakeLists.txt  v2  v2.cpp
BlobMasses/v3/: v3.cpp
BlobMasses/v4/: v4.cpp
LR1/: comparer.py  env.txt  env_loader.py  free_dictionary.py  main.py  merriam_webster.py
LR2/: config1.yaml  config2.yaml  config3.yaml  interface.py  main.py  req.txt  text_generator.py
LR4/: main.py  requirements.txt
LR4/config/: config.py
LR4/database/: activity_handler.py  activity_logs.json  activity_view.py
LR4/modules/dictionary/: dictionary_handler.py  dictionary_logic.py
LR4/modules/grammar/: grammar_handler.py  grammar_logic.py
LR4/modules/qa/: config.yaml  qa_handler.py  qa_logic.py
LR4/modules/tasks/: grammar_modules.json  grammar_structures.json  grammar_tasks.json  vocab_wordgroups.json
LR4/modules/test/: test_handler.py  test_logic.py
LR4/modules/writing/: writing_handler.py  writing_logic.py
LR4/utils/: buttons.py
